--- a/main.html
+++ b/main.html
@@ -7,10 +7,26 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+	<h1>My Playlist</h1>
 
+	<div id="div1">
+		<ul>
+			<li><a target ="_blank" href="#" class="ul-anchor">Song 1</a></li>
+			<li><a target ="_blank" href="#" class="ul-anchor">Song 2</a></li>
+			<li><a target ="_blank" href="#" class="ul-anchor">Song 3</a></li>
+			<li><a target ="_blank" href="#" class="ul-anchor">Song 4</a></li>
+			<li><a target ="_blank" href="#" class="ul-anchor">Song 5</a></li>
+		</ul>
+	</div>
+
+    <h2>Now Playing...</h2>
+
+    <div id="div2">
+        <video src="https://www.w3schools.com/tags/movie.mp4" controls class="player_one"></video>
+        <h3>MP3 songs</h3>
+        <p>Maan Meri Jaan</p>
+        <audio src="https://www.pagalworld.com.se/files/download/id/64630" controls class="player_two"></audio>
+    </div>
 </body>
 
 </html>
