--- a/main.html
+++ b/main.html
@@ -22,10 +22,10 @@
     <h2>Now Playing...</h2>
 
     <div id="div2">
-        <video src="https://www.w3schools.com/tags/movie.mp4" controls class="player_one"></video>
+        <video controls class="player_one"> <source src= "https://www.w3schools.com/tags/movie.mp4" type ="video/mp4"></video>
         <h3>MP3 songs</h3>
         <p>Maan Meri Jaan</p>
-        <audio src="https://www.pagalworld.com.se/files/download/id/64630" controls class="player_two"></audio>
+        <audio controls class="player_two"><source src="https://www.pagalworld.com.se/files/download/id/64630" type="audio/mp3"></audio>
     </div>
 </body>
 
